<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#25DB30"
    tools:context=".inicioSesioUsuario">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="599dp"
        android:layout_height="966dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/imagenFondo1"
        app:srcCompat="@drawable/imagefondo1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C4000000"
        android:contentDescription="@string/imagenFondo"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_margin="20dp"
            android:background="@drawable/circulo_logo"
            android:contentDescription="@string/imagenFondo"
            android:padding="10dp"

            app:srcCompat="@drawable/sinfondologo" />

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/correoElectronico"
            android:inputType="textEmailAddress"
            android:textColor="#ccc"
            android:textColorHint="#ccc"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/txVConrasena"
            android:inputType="textPassword"
            android:textColor="#ccc"
            android:textColorHint="#ccc"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnInicioUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_inicio_usuario"
            android:elevation="5dp"
            android:text="@string/IniciarSesio"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"

        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mensajeCrearCuenta"
                android:textColor="#fff"
                android:layout_marginLeft="90dp"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnCrearCuenta"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/crearCuenta"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>