<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nuevoUsuario">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="599dp"
        android:layout_height="966dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/imagenFondo1"
        app:srcCompat="@drawable/imagefondo1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C4000000"
        android:contentDescription="@string/imagenFondo"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">




        <TextView
            android:layout_width="217dp"
            android:layout_height="wrap_content"
           android:layout_margin="50dp"
            android:text="Nuevo Usuario"
            android:textColor="#ccc"
            android:textSize="30sp" />


        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/correoElectronico"
            android:inputType="textEmailAddress"
            android:textColor="#ccc"
            android:textColorHint="#ccc"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/txVConrasena"
            android:inputType="textPassword"
            android:textColor="#ccc"
            android:textColorHint="#ccc"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtConfirmarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/txVConrasenaConfirmar"
            android:inputType="textPassword"
            android:textColor="#ccc"
            android:textColorHint="#ccc"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnInicioUsuario1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_inicio_usuario"
            android:elevation="5dp"
            android:text="@string/IniciarSesio"
            android:textSize="16sp"
            android:translationY="20dp" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>