<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="409dp"
        android:layout_height="650dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:text="@string/titulo_Home"
            android:textAlignment="center"
            android:textColor="#0B723B"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/eTxtBuscar"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:translationX="50dp"
            android:hint="@string/txt_view_NombreComida"
            android:translationY="100dp" />

        <Button
            android:id="@+id/btnBuscarComida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBuscar"
            android:textAlignment="center"
            android:textSize="15sp"
            android:translationX="150dp"
            android:translationY="150dp" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>